# Propellant

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  shell.nix
examples/: basic.rs  custom_pipeline.rs  empty.rs  engine.rs  input.rs  model.rs  object_loading.rs  parenting.rs  perf.rs  rendering.rs  text.rs  texture_loading.rs  ui.rs
examples/model/: cat.gmesh
src/: engine.rs  lib.rs
src/engine/: consts.rs  engine_builder.rs  engine_events.rs  errors.rs  flags.rs  inputs.rs  material.rs  mesh.rs  renderable.rs  renderer.rs  resources.rs  transform.rs  utils.rs  window.rs
src/engine/animations/: mod.rs
src/engine/common_components/: camera.rs
src/engine/common_systems/: fps_limiter.rs  mod.rs
src/engine/engine_events/: input_handler.rs  input_listener.rs
src/engine/errors/: debug_error.rs  loading_errors.rs  rendering_error.rs
src/engine/flags/: resource_loading.rs
src/engine/inputs/: input_context.rs  input_handler.rs  input_system.rs
src/engine/lights/: directionnal_light.rs  mod.rs
src/engine/material/: colored_texture.rs  default_material.rs  pbr_material.rs  phong_material.rs  ui_material.rs
src/engine/mesh/: cube.rs  instance_mesh_lib.rs  instance_mesh_lib_builder.rs  instance_renderer.rs  loader.rs  mesh_library.rs  mesh_renderer.rs  mesh_renderer_builder.rs  quad.rs  sphere.rs  ui_quad.rs  vertex.rs
src/engine/renderable/: mesh.rs  vertex.rs
src/engine/renderer/: shaders.rs  (+8 more)
src/shaders/: default.frag  default.vert  text.frag  text.vert  ui.frag  ui.vert
src/utils/: builder.rs  id.rs  mod.rs
tools/: blender_exporter.py
(+107 files in other folders)
