[package]
name = "propellant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-fnv1a-hash = "1.1.0"
fontdue = "0.7.3"
foundry = {path = "deps/foundry"}
glam = "0.24.0"
image = "0.24.6"
paste = "1.0.14"
rand = "0.8.5"
smallvec = "1.11.0"
tree-box = {path = "deps/tree-box"}
vk-shader-macros = "0.2.8"
vulkanalia = { version = "=0.19.0", features = ["libloading", "provisional", "window"], optional = true }
winit = { version = "0.28.5", optional = true }


[features]
# for dev purposes, default includes everything so we can try them out
default = ["debug-features", "window", "vulkan-renderer", "resources", "inputs", "ui", "animation"]
debug-features = []
inputs = []
resources = []
ui = []
vulkan-renderer = ["window", "dep:vulkanalia"]
window = ["dep:winit"]
animation = []
